--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   drift: ^2.23.1
   drift_flutter: ^0.2.4
   path: ^1.9.0
+  dio: ^5.7.0
+  cached_network_image: ^3.4.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
