--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   path: ^1.9.0
   dio: ^5.7.0
   cached_network_image: ^3.4.1
+  path_provider: ^2.1.5
+  sqlite3_flutter_libs: ^0.5.28
+  sqflite: ^2.4.1
 
 dev_dependencies:
   flutter_test:
