--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   path_provider: ^2.1.5
   sqlite3_flutter_libs: ^0.5.28
   sqflite: ^2.4.1
+  flutter_svg: ^2.0.17
 
 dev_dependencies:
   flutter_test:
